--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,13 +11,6 @@ on:
         description: 'The git ref (branch, tag, or SHA) to checkout for building the application. Defaults to the value of triggering_ref if not specified.'
         required: false
         type: string
-    outputs:
-      image_tag:
-        description: 'The Docker image tag that was built (e.g., v1.0.0).'
-        value: ${{ jobs.build_and_push_docker_image.outputs.image_tag }}
-      image_name:
-        description: 'The full Docker image name that was built (e.g., ghcr.io/owner/repo).'
-        value: ${{ jobs.build_and_push_docker_image.outputs.image_name }}
 
 permissions:
   contents: write
@@ -33,10 +26,10 @@ jobs:
     env:
       REPO_NAME: ${{ github.event.repository.name }}
     steps:
-      - name: Checkout Repository for Build
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          ref: ${{ inputs.source_checkout_ref || inputs.triggering_ref }}
+          ref: main
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -70,18 +63,24 @@ jobs:
         id: image_meta_output
         run: echo "version=${{ steps.meta.outputs.version }}" >> $GITHUB_OUTPUT
 
-  update_manifest_dev:
-    name: Update Development Manifest
+  update_manifest:
+    name: Update Manifest for ${{ matrix.target_env }}
     needs: build_and_push_docker_image
-    if: contains(inputs.triggering_ref, 'alpha')
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target_env: [development, staging, production]
+    
     environment:
-      name: development
-    env:
-      MANIFEST_FILE: "./k8s/overlays/development/deployment.yaml"
-      GIT_COMMIT_MESSAGE: "Update dev deployment image to ${{ needs.build_and_push_docker_image.outputs.image_tag }}"
+      name: ${{ matrix.target_env }}
+
+    if: |
+      (matrix.target_env == 'development' && contains(github.ref_name, 'alpha')) ||
+      (matrix.target_env == 'staging' && contains(github.ref_name, 'beta')) ||
+      (matrix.target_env == 'production' && !contains(github.ref_name, 'alpha') && !contains(github.ref_name, 'beta'))
+    
     steps:
-      - name: Checkout Repository (main branch for manifest update)
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -89,145 +88,69 @@ jobs:
 
       - name: Install yq
         run: |
-            sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/bin/yq
-            sudo chmod +x /usr/bin/yq
-            yq --version
+          sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/bin/yq
+          sudo chmod +x /usr/bin/yq
+          yq --version
+
+      - name: Set environment-specific variables
+        id: env_specifics
+        run: |
+          TARGET_ENV_NAME="${{ matrix.target_env }}"
+          MANIFEST_FILE_PATH=""
+          COMMIT_MESSAGE_ENV_SLUG=""
+
+          if [ "$TARGET_ENV_NAME" == "development" ]; then
+            MANIFEST_FILE_PATH="./k8s/overlays/development/deployment.yaml"
+            COMMIT_MESSAGE_ENV_SLUG="dev"
+          elif [ "$TARGET_ENV_NAME" == "staging" ]; then
+            MANIFEST_FILE_PATH="./k8s/overlays/staging/deployment.yaml"
+            COMMIT_MESSAGE_ENV_SLUG="staging"
+          elif [ "$TARGET_ENV_NAME" == "production" ]; then
+            MANIFEST_FILE_PATH="./k8s/overlays/production/deployment.yaml"
+            COMMIT_MESSAGE_ENV_SLUG="production"
+          else
+            echo "Error: Unknown target_env: $TARGET_ENV_NAME"
+            exit 1
+          fi
+          echo "MANIFEST_FILE=${MANIFEST_FILE_PATH}" >> $GITHUB_OUTPUT
+          echo "COMMIT_SLUG=${COMMIT_MESSAGE_ENV_SLUG}" >> $GITHUB_OUTPUT
 
       - name: Update Kubernetes Manifest
         env:
+          MANIFEST_FILE: ${{ steps.env_specifics.outputs.MANIFEST_FILE }}
           NEW_IMAGE_WITH_TAG: "${{ needs.build_and_push_docker_image.outputs.image_name }}:${{ needs.build_and_push_docker_image.outputs.image_tag }}"
         run: |
-          echo "Triggering ref for this run: ${{ inputs.triggering_ref }}"
-          echo "Updating $MANIFEST_FILE with image: $NEW_IMAGE_WITH_TAG"
+          echo "Triggering Git tag: ${{ github.ref_name }}"
+          echo "Target environment: ${{ matrix.target_env }}"
+          echo "Updating manifest $MANIFEST_FILE with image $NEW_IMAGE_WITH_TAG"
+          
           if [ ! -f "$MANIFEST_FILE" ]; then
-            echo "Error: $MANIFEST_FILE not found"
+            echo "Error: Manifest file $MANIFEST_FILE not found!"
             exit 1
           fi
+
           if ! yq e '.spec.template.spec.containers[0]' "$MANIFEST_FILE" > /dev/null; then
             echo "Error: No container found at .spec.template.spec.containers[0] in $MANIFEST_FILE"
             exit 1
           fi
+          
           yq e '.spec.template.spec.containers[0].image = strenv(NEW_IMAGE_WITH_TAG)' -i "$MANIFEST_FILE"
-          echo "Manifest content after update:"
+          echo "Manifest content after update for ${{ matrix.target_env }}:"
           cat "$MANIFEST_FILE"
 
       - name: Commit and Push Manifest Changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add "$MANIFEST_FILE"
-          if git diff --staged --quiet; then
-            echo "No changes to commit to $MANIFEST_FILE."
-          else
-            git commit -m "${{ env.GIT_COMMIT_MESSAGE }}"
-            git push origin main
-            echo "Pushed manifest changes for development to main branch."
-          fi
-
-  update_manifest_staging:
-    name: Update Staging Manifest
-    needs: build_and_push_docker_image
-    if: contains(inputs.triggering_ref, 'beta')
-    runs-on: ubuntu-latest
-    environment:
-      name: staging
-    env:
-      MANIFEST_FILE: "./k8s/overlays/staging/deployment.yaml"
-      GIT_COMMIT_MESSAGE: "Update staging deployment image to ${{ needs.build_and_push_docker_image.outputs.image_tag }}"
-    steps:
-      - name: Checkout Repository (main branch for manifest update)
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: main
-
-      - name: Install yq
-        run: |
-            sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/bin/yq
-            sudo chmod +x /usr/bin/yq
-            yq --version
-
-      - name: Update Kubernetes Manifest
         env:
-          NEW_IMAGE_WITH_TAG: "${{ needs.build_and_push_docker_image.outputs.image_name }}:${{ needs.build_and_push_docker_image.outputs.image_tag }}"
-        run: |
-          echo "Triggering ref for this run: ${{ inputs.triggering_ref }}"
-          echo "Updating $MANIFEST_FILE with image: $NEW_IMAGE_WITH_TAG"
-          if [ ! -f "$MANIFEST_FILE" ]; then
-            echo "Error: $MANIFEST_FILE not found"
-            exit 1
-          fi
-          if ! yq e '.spec.template.spec.containers[0]' "$MANIFEST_FILE" > /dev/null; then
-            echo "Error: No container found at .spec.template.spec.containers[0] in $MANIFEST_FILE"
-            exit 1
-          fi
-          yq e '.spec.template.spec.containers[0].image = strenv(NEW_IMAGE_WITH_TAG)' -i "$MANIFEST_FILE"
-          echo "Manifest content after update:"
-          cat "$MANIFEST_FILE"
-
-      - name: Commit and Push Manifest Changes
+          MANIFEST_FILE: ${{ steps.env_specifics.outputs.MANIFEST_FILE }}
+          GIT_COMMIT_MESSAGE: "Update ${{ steps.env_specifics.outputs.COMMIT_SLUG }} deployment image to ${{ needs.build_and_push_docker_image.outputs.image_tag }}"
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add "$MANIFEST_FILE"
+          
           if git diff --staged --quiet; then
-            echo "No changes to commit to $MANIFEST_FILE."
+            echo "No changes to commit to $MANIFEST_FILE for ${{ matrix.target_env }}."
           else
             git commit -m "${{ env.GIT_COMMIT_MESSAGE }}"
-            git push origin main
-            echo "Pushed manifest changes for staging to main branch."
-          fi
-
-  update_manifest_production:
-    name: Update Production Manifest
-    needs: build_and_push_docker_image
-    if: "!contains(inputs.triggering_ref, 'alpha') && !contains(inputs.triggering_ref, 'beta')"
-    runs-on: ubuntu-latest
-    environment:
-      name: production
-    env:
-      MANIFEST_FILE: "./k8s/overlays/production/deployment.yaml"
-      GIT_COMMIT_MESSAGE: "Update production deployment image to ${{ needs.build_and_push_docker_image.outputs.image_tag }}"
-    steps:
-      - name: Checkout Repository (main branch for manifest update)
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          ref: main
-
-      - name: Install yq
-        run: |
-            sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/bin/yq
-            sudo chmod +x /usr/bin/yq
-            yq --version
-
-      - name: Update Kubernetes Manifest
-        env:
-          NEW_IMAGE_WITH_TAG: "${{ needs.build_and_push_docker_image.outputs.image_name }}:${{ needs.build_and_push_docker_image.outputs.image_tag }}"
-        run: |
-          echo "Triggering ref for this run: ${{ inputs.triggering_ref }}"
-          echo "Updating $MANIFEST_FILE with image: $NEW_IMAGE_WITH_TAG"
-          if [ ! -f "$MANIFEST_FILE" ]; then
-            echo "Error: $MANIFEST_FILE not found"
-            exit 1
-          fi
-          if ! yq e '.spec.template.spec.containers[0]' "$MANIFEST_FILE" > /dev/null; then
-            echo "Error: No container found at .spec.template.spec.containers[0] in $MANIFEST_FILE"
-            exit 1
-          fi
-          yq e '.spec.template.spec.containers[0].image = strenv(NEW_IMAGE_WITH_TAG)' -i "$MANIFEST_FILE"
-          echo "Manifest content after update:"
-          cat "$MANIFEST_FILE"
-
-      - name: Commit and Push Manifest Changes
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add "$MANIFEST_FILE"
-          if git diff --staged --quiet; then
-            echo "No changes to commit to $MANIFEST_FILE."
-          else
-            git commit -m "${{ env.GIT_COMMIT_MESSAGE }}"
-            git push origin main
-            echo "Pushed manifest changes for production to main branch."
+            git push origin main # Pushing changes to 'main' branch, as in your original workflow
+            echo "Pushed manifest changes for ${{ matrix.target_env }} to 'main' branch."
           fi
