--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: ${{ inputs.source_checkout_ref || inputs.triggering_ref }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -74,25 +74,41 @@ jobs:
     environment:
       name: ${{ matrix.target_env }}
 
-    if: |
-      (matrix.target_env == 'development' && contains(github.ref_name, 'alpha')) ||
-      (matrix.target_env == 'staging' && contains(github.ref_name, 'beta')) ||
-      (matrix.target_env == 'production' && !contains(github.ref_name, 'alpha') && !contains(github.ref_name, 'beta'))
-    
     steps:
+      - name: Determine if job should run for ${{ matrix.target_env }}
+        id: condition_check
+        env:
+          TRIGGERING_REF: ${{ inputs.triggering_ref }}
+          TARGET_ENV: ${{ matrix.target_env }}
+        run: |
+          echo "Evaluating condition for TARGET_ENV: $TARGET_ENV based on TRIGGERING_REF: $TRIGGERING_REF"
+          should_run="false"
+          if [ "$TARGET_ENV" == "development" ] && [[ "$TRIGGERING_REF" == *alpha* ]]; then
+            should_run="true"
+          elif [ "$TARGET_ENV" == "staging" ] && [[ "$TRIGGERING_REF" == *beta* ]]; then
+            should_run="true"
+          elif [ "$TARGET_ENV" == "production" ] && [[ "$TRIGGERING_REF" != *alpha* ]] && [[ "$TRIGGERING_REF" != *beta* ]]; then
+            should_run="true"
+          fi
+          echo "Decision: should_run=$should_run"
+          echo "should_run=$should_run" >> $GITHUB_OUTPUT
+
       - name: Checkout Repository
+        if: steps.condition_check.outputs.should_run == 'true'
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           ref: main
 
       - name: Install yq
+        if: steps.condition_check.outputs.should_run == 'true'
         run: |
           sudo wget https://github.com/mikefarah/yq/releases/download/v4.44.3/yq_linux_amd64 -O /usr/bin/yq
           sudo chmod +x /usr/bin/yq
           yq --version
 
       - name: Set environment-specific variables
+        if: steps.condition_check.outputs.should_run == 'true'
         id: env_specifics
         run: |
           TARGET_ENV_NAME="${{ matrix.target_env }}"
@@ -116,11 +132,12 @@ jobs:
           echo "COMMIT_SLUG=${COMMIT_MESSAGE_ENV_SLUG}" >> $GITHUB_OUTPUT
 
       - name: Update Kubernetes Manifest
+        if: steps.condition_check.outputs.should_run == 'true'
         env:
           MANIFEST_FILE: ${{ steps.env_specifics.outputs.MANIFEST_FILE }}
           NEW_IMAGE_WITH_TAG: "${{ needs.build_and_push_docker_image.outputs.image_name }}:${{ needs.build_and_push_docker_image.outputs.image_tag }}"
         run: |
-          echo "Triggering Git tag: ${{ github.ref_name }}"
+          echo "Triggering Git ref from input: ${{ inputs.triggering_ref }}"
           echo "Target environment: ${{ matrix.target_env }}"
           echo "Updating manifest $MANIFEST_FILE with image $NEW_IMAGE_WITH_TAG"
           
@@ -139,6 +156,7 @@ jobs:
           cat "$MANIFEST_FILE"
 
       - name: Commit and Push Manifest Changes
+        if: steps.condition_check.outputs.should_run == 'true'
         env:
           MANIFEST_FILE: ${{ steps.env_specifics.outputs.MANIFEST_FILE }}
           GIT_COMMIT_MESSAGE: "Update ${{ steps.env_specifics.outputs.COMMIT_SLUG }} deployment image to ${{ needs.build_and_push_docker_image.outputs.image_tag }}"
@@ -150,7 +168,7 @@ jobs:
           if git diff --staged --quiet; then
             echo "No changes to commit to $MANIFEST_FILE for ${{ matrix.target_env }}."
           else
-            git commit -m "${{ env.GIT_COMMIT_MESSAGE }}"
-            git push origin main # Pushing changes to 'main' branch, as in your original workflow
+            git commit -m "${GIT_COMMIT_MESSAGE}"
+            git push origin main 
             echo "Pushed manifest changes for ${{ matrix.target_env }} to 'main' branch."
           fi
